@@ -424,7 +424,6 @@ export(fp)
 export(fpr)
 export(getAggrPerformances)
 export(getBaggingModels)
-export(getBaseLearnerPredictions)
 export(getConfMatrix)
 export(getCostSensClassifModel)
 export(getCostSensRegrModels)
@@ -441,6 +440,7 @@ export(getParamSet)
 export(getPerformances)
 export(getPredictions)
 export(getProbabilities)
+export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskFeatureNames)
