@@ -1,9 +1,9 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{getBaseLearnerPredictions}
-\alias{getBaseLearnerPredictions}
+\name{getStackedBaseLearnerPredictions}
+\alias{getStackedBaseLearnerPredictions}
 \title{Returns the predictions for each base learner.}
 \usage{
-getBaseLearnerPredictions(model, newdata = NULL)
+getStackedBaseLearnerPredictions(model, newdata = NULL)
 }
 \arguments{
 \item{model}{[\code{WrappedModel}]\cr Wrapped model, result of train.}
