@@ -9,6 +9,8 @@ mlr_2.2:
 - basic R learners now have new slots: name (a descriptive name of the algorithm),
   short.name (abbreviation that can be used in plots and tables) and note
   (notes regarding slight changes for the mlr integration of the learner and such).
+- makeLearner now supports some options reagrding learner error handling and output which
+  could before only be set globally via configureMlr 
 - Additional arguments for imputation functions to allow a more fine-grain
   control of dummy column creation
 - imputeMin and imputeMax now subtract or add a multiple of the range of
@@ -25,6 +27,9 @@ mlr_2.2:
 - the whole object-oriented structure behind feature filtering was much improved
 - fixed a bug in filter methods of the FSelector package that caused an error when variable names
   contained accented letters
+- We dropped the data.frame version of some preprocessing operations like mergeFactorLevelsBySize,
+  joinClassLevels and removeConstantFeatures for consistency. These now always require tasks as input.
+- We support a pretty generic framework for stacking / super-learning now
 - imbalancy correction + smote:
   -- fix a bug in "smote" when only factor features are present
   -- change to oversampling: sample new observations only (with replacement)
@@ -55,6 +60,7 @@ mlr_2.2:
 
 - new functions
 -- makeMulticlassWrapper
+-- makeStackedLearner, getStackedBaseLearnerPredictions
 -- joinClassLevels
 -- summarizeColumns, summarizeLevels
 -- capLargeValues, mergeFactorLevelsBySize
